# voxelizer

./: .gitignore  CMakeLists.txt  README.md  voxelizer.h
test/: mesh_util.cpp  mesh_util.h  volume_calculation_test.cpp  volume_test.cpp  voxelization_test.cpp  voxelize_test.cpp  voxelizer.cpp
test/tmp/: .gitignore
tools/: view_pcd.py
